--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,11 @@ import Layout from "../layouts/Layout.astro";
     <button id="enableNotifications">Enable Notifications</button>
     <button id="testWebhook">Test Webhook</button>
 
+    <div style="margin: 1rem 0;">
+      <a href="/clients" style="margin-right: 1rem;">📋 View All Clients</a>
+      <a href="/admin/send">⚙️ Admin - Send Messages</a>
+    </div>
+
     <div id="status"></div>
 
     <div id="notifications">
